[user-management-ui-fixes] secondary text style fixes and some alignment for spacing.

--- a/frontend/express/public/core/user-management/stylesheets/_drawer.scss
+++ b/frontend/express/public/core/user-management/stylesheets/_drawer.scss
@@ -76,9 +76,6 @@
   }
 
   &__help-text {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
     font-size: 12px;
     line-height: 16px;
     color: #81868D;
